--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "animate.css": "^3.5.2",
     "axios": "^0.16.2",
+    "element-china-area-data": "^4.0.0",
     "element-ui": "^2.0.5",
     "font-awesome": "^4.7.0",
     "js-md5": "^0.5.0",
