--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "vue-preview": "^1.0.5",
     "vue-router": "^2.3.1",
     "vue-scrollto": "^2.7.2",
-    "vuex": "^2.3.1",
-    "wangeditor": "^3.0.4"
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
